Worked on Sending File

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="send_file">Chercher un destinataire</string>
 
     <string name="waiting_destination">Recherche de destinataire en cours…</string>
-    <string name="title_activity_destination">DestinationActivity</string>
+    <string name="title_activity_destination">Trouver un destinataire</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -15,4 +15,6 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="confirm">Confirmer</string>
+
+    <string name="sending_file">Envoi du fichier en cours…</string>
 </resources>
