Worked on Sending File2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
     <string name="confirm">Confirmer</string>
 
     <string name="sending_file">Envoi du fichier en cours…</string>
+    <string name="label_sending">Transfert</string>
+
+    <string name="NA">N/A</string>
+
+    <string name="finish">Terminer</string>
 </resources>
